--- a/index.html
+++ b/index.html
@@ -80,17 +80,17 @@
                 <p style="margin-left: 30px;">example@huddle.com</p>
               </span>
           </div>
-          <div>
+          <div class="temp">
             <a href="#">About Us</a>
             <a href="#">What We Do</a>
             <a href="#">FAQ</a>
           </div>
-          <div>
+          <div class="temp">
             <a href="#">Career</a>
             <a href="#">Blog</a>
             <a href="#">Contact Us</a>
           </div>
-          <div class="icons" style="display: flow-root;">
+          <div class="icons temp" style="display: flow-root;">
             <a href="#"><img src="images/fb.png" alt=""></a>
             <a href="#"><img src="images/twit.png" alt=""></a>
             <a href="#"><img src="images/insta.png" alt=""></a>
