--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-      <header class="headr"><img style="margin-left: 30px;" src="images/logo.svg" alt=""><button style="margin-right: 30px;">Try it free</button></header>
+      <header class="headr"><img style="margin-left: 30px;" src="images/logo.svg" alt="main logo"><button style="margin-right: 30px;">Try it free</button></header>
       <div class="subcontainer">
         <div class="heading">
           <h1>Build The Community Your Fans Will Love</h1>
@@ -22,7 +22,7 @@
           <button>Get Started For Free</button>
         </div>
         <div class="illustration">
-          <img src="images/illustration-mockups.svg" alt="">
+          <img src="images/illustration-mockups.svg" alt=" button">
         </div>
       </div>
     </div>
@@ -33,7 +33,7 @@
           <p>Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form.</p>
         </div>
         <div class="blockillus">
-          <img src="images/illustration-grow-together.svg" alt="">
+          <img src="images/illustration-grow-together.svg" alt="button">
         </div>
       </div>
       <div class="block reve">
@@ -42,7 +42,7 @@
           <p>You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.</p>
         </div>
         <div class="blockillus">
-          <img src="images/illustration-flowing-conversation.svg" alt="">
+          <img src="images/illustration-flowing-conversation.svg" alt="button">
         </div>
       </div>
       <div class="block">
@@ -51,7 +51,7 @@
           <p>It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.</p>
         </div>
         <div class="blockillus">
-          <img src="images/illustration-your-users.svg" alt="">
+          <img src="images/illustration-your-users.svg" alt="button">
         </div>
       </div>
     </div>
@@ -66,17 +66,17 @@
       <div class="bottomfoot">
         <div class="details">
           <div id="address">
-              <img style="width: 250px; padding-bottom: 20px;" src="images/logo2.png" alt="">
+              <img style="width: 250px; padding-bottom: 20px;" src="images/logo2.png" alt="button">
               <span style="display: flex; margin-bottom: 30px;">
-                <img src="images/icon-location.svg" alt="" style="height: 20px;">
+                <img src="images/icon-location.svg" alt="button" style="height: 20px;">
                 <p style="margin-left: 30px;"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua </p>
               </span>
               <span style="display: flex; margin-bottom: 20px;">
-                <img src="images/icon-phone.svg" alt="" style="height: 20px;">
+                <img src="images/icon-phone.svg" alt="button" style="height: 20px;">
                 <p style="margin-left: 30px;">+1-543-123-4567 </p>
               </span>
               <span style="display: flex;">
-                <img src="images/icon-email.svg" alt="" style="height: 20px;"> 
+                <img src="images/icon-email.svg" alt="button" style="height: 20px;"> 
                 <p style="margin-left: 30px;">example@huddle.com</p>
               </span>
           </div>
@@ -91,9 +91,9 @@
             <a href="#">Contact Us</a>
           </div>
           <div class="icons temp" style="display: flow-root;">
-            <a href="#"><img src="images/fb.png" alt=""></a>
-            <a href="#"><img src="images/twit.png" alt=""></a>
-            <a href="#"><img src="images/insta.png" alt=""></a>
+            <a href="#"><img src="images/fb.png" alt="button"></a>
+            <a href="#"><img src="images/twit.png" alt="button"></a>
+            <a href="#"><img src="images/insta.png" alt="button"></a>
           </div>
         </div>
         <div>
